changed tally correct and tally incorect styles on the global styles, to see if it would fix an issue on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -82,12 +82,12 @@
 
 .tallyCorrect {
   color: greenyellow;
-  font-size: 50px;
+  font-size: 200%;
 }
 
 .tallyIncorrect {
   color: red;
-  font-size: 50px;
+  font-size: 200%;
 }
 
 .divWidth {
@@ -115,4 +115,8 @@
 
 .color3 {
   color: rgb(254, 236, 186);
+}
+
+.oneThird {
+  width: 33.33%;
 }
